# PIxel

./: CMakeLists.txt  README.md
src/pix_base/: log.cpp  log.h  macro.h  security.cpp  security.h  string_helper.cpp  string_helper.h  system_logger.cpp  system_logger.h
src/pix_containers/: array.h  dummy.cpp  vector.h
src/pix_math/: const.h  types.h  vector4.h  vector4.inl  vector4i.h  vector4i.inl
src/pix_memory/: allocator.cpp  allocator.h  common.cpp  common.h  system_allocator.cpp  system_allocator.h
test/: CMakeLists.txt  testvec4i.cpp
